Updates default AI model and API key labels
Updates the default AI model to "meta-llama/llama-4-maverick-17b-128e-instruct" and renames "Groq API Key" to "API Key" to accommodate other providers like Gemini.
Also updates API settings subtitle to reflect provider selection

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -32,8 +32,8 @@
     
     <!-- API Settings -->
     <string name="api_settings_title">Cài đặt API</string>
-    <string name="api_settings_subtitle">Groq API Key, Model AI</string>
-    <string name="api_key_title">Groq API Key</string>
+    <string name="api_settings_subtitle">Nhà cung cấp, Groq/Gemini API Key, Model AI</string>
+    <string name="api_key_title">API Key</string>
     <string name="get_api_key">Lấy API Key</string>
     <string name="api_key_saved">Lưu API Key</string>
     <string name="select_model">Chọn Model AI</string>
