Improves file loading UX
Refactors the file loading process to improve user experience.

Adds a delay before rendering the list of string resources to prevent UI jank during initial parsing. Also, changes the text "Translating..." to "Loading file..." during the file processing stage for clarity and uses animations to smoothly show/hide the list.

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -24,6 +24,7 @@
     <string name="translated_value_default">Value-đã dịch</string>
     <string name="no_file_selected">Chưa chọn file</string>
     <string name="translating">Đang dịch…</string>
+    <string name="loading_file">Đang tải...</string>
     <string name="file_saved">Đã lưu file vào Downloads/VTU-Translate: %1$s</string>
     <string name="error_saving_file">Lỗi khi lưu file: %1$s</string>
     
